add header in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 </head>
 
 <body>
-    
+    <header>
+        <h1>SE LAB 1</h1>
+        <nav>
+            <ul>
+                <li><a href="#about" title="Learn more about us">About</a></li>
+                <li><a href="#about-us" title="Discover who we are">About Us</a></li>
+                <li><a href="#shop" title="Explore our shop">Shop</a></li>
+            </ul>
+        </nav>
+        <button class="login-btn">Login</button>
+    </header>
 </body>
 
 </html>
