--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
         </nav>
         <button class="login-btn">Login</button>
     </header>
+    <section class="names">
+        <h2>Our Team</h2>
+        <ul class="cat-list">
+            <li>Nima</li>
+            <li>Moein</li>
+            <li>Kiana</li>
+        </ul>
+    </section>
+
 </body>
 
 </html>
