--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
         </ul>
     </section>
 
+    <section class="cat-image">
+        <h2>Our Favorite Cats</h2>
+        <img src="cat.jpg" alt="Cute Cat">
+    </section>
+
 </body>
 
 </html>
