add cat table and style

--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@
         <img src="cat.jpg" alt="Cute Cat">
     </section>
 
+    <section class="cat-table">
+            <h2>Types of Cats and Their Features</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Cat Type</th>
+                        <th>Color</th>
+                        <th>Temperament</th>
+                    </tr>
+                </thead>
+                
+            </table>
+        </section>
+
 </body>
 
 </html>
