add other rows for cat types

--- a/index.html
+++ b/index.html
@@ -44,7 +44,28 @@
                         <th>Temperament</th>
                     </tr>
                 </thead>
-                
+                <tbody>
+                    <tr>
+                        <td>Siamese</td>
+                        <td>Cream with Dark Points</td>
+                        <td>Social, Vocal</td>
+                    </tr>
+                    <tr>
+                        <td>Persian</td>
+                        <td>White</td>
+                        <td>Calm, Affectionate</td>
+                    </tr>
+                    <tr>
+                        <td>Maine Coon</td>
+                        <td>Brown Tabby</td>
+                        <td>Gentle, Playful</td>
+                    </tr>
+                    <tr>
+                        <td>Bengal</td>
+                        <td>Spotted Gold</td>
+                        <td>Active, Intelligent</td>
+                    </tr>
+                </tbody>
             </table>
         </section>
 
