add divider and style

--- a/index.html
+++ b/index.html
@@ -35,18 +35,20 @@
     </section>
 
     <section class="cat-table">
-            <h2>Types of Cats and Their Features</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Cat Type</th>
-                        <th>Color</th>
-                        <th>Temperament</th>
-                    </tr>
-                </thead>
-                
-            </table>
-        </section>
+        <h2>Types of Cats and Their Features</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Cat Type</th>
+                    <th>Color</th>
+                    <th>Temperament</th>
+                </tr>
+            </thead>
+            
+        </table>
+    </section>
+
+    <hr class="divider">
 
 </body>
 
