add accordion-section container in index.html

--- a/index.html
+++ b/index.html
@@ -39,6 +39,17 @@
         </section>
 
         <hr class="divider">
+        <section class="accordion-section">
+            <div class="accordion">
+                <input type="checkbox" id="cat-facts">
+                <label for="cat-facts">Cat Facts</label>
+                <div class="content">
+                    <p>Cats sleep for around 13 to 16 hours a day.</p>
+                </div>
+            </div>
+        </section>
+
+        <hr class="divider">
 
         <section class="cat-table">
             <h2>Types of Cats and Their Features</h2>
