add  container in index.html

--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
         </section>
 
         <hr class="divider">
+
+        <section class="progress-section">
+            <h2>Adoption Progress</h2>
+            <div class="progress-bar">
+                <div class="progress"></div>
+            </div>
+        </section>
     </main>
 </body>
 
