add style to names list

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <section class="names">
             <h2>Our Team</h2>
-            <ul class="cat-list">
+            <ul class="names-list">
                 <li>Nima</li>
                 <li>Moein</li>
                 <li>Kiana</li>
